--- a/aula06/ex02.html
+++ b/aula06/ex02.html
@@ -17,7 +17,7 @@
     <h1>Olá mundo!</h1>
     <p>ja me livrei da maldição!!</p>
     <script>
-       var nome = window.prompt('minha primeira mensagem!');
+       var nome = window.prompt('Qual é o seu nome?!');
       window.alert('È um grande prazer te conhecer,' + nome +'!')
     </script>
 </body>
