--- a/aula06/ex04.html
+++ b/aula06/ex04.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</head>j
 <body>
     <script>
         var nome = window.prompt('Qual é o seu nome')
