--- a/aula10/ex07.html
+++ b/aula10/ex07.html
@@ -14,7 +14,15 @@
    <div id="res">Resultado</div>
 
    <script>
-       function somar
+       function somar(){
+       var tn1=window.document.getElementById('txtn1')    
+       var tnt2=window.document.getElementById('txtn2')
+       var res= window.document.getElementById('res')
+       var n1= Number(tnt1.value)
+       var n2= Number(tnt2.value)
+       var s = n1+n2
+       res.innerHTML= s
+       }
    </script>
 
 </body>
