--- a/aula10/ex07.html
+++ b/aula10/ex07.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando numeros</title>
+    <style>
+        body{
+            font: normal 18pt Arial;
+        }
+        input{
+            font: normal 18pt Arial;
+            width: 100px;
+        }
+        div#res{
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Somando valores</h1>
@@ -21,7 +33,8 @@
         var n1 = Number(tn1.value)
         var n2 = Number(tn2.value)
         var s = n1 + n2
-        res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${s}`
+        res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}</strong>`
+        
     }
 
     </script>
