--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -5,11 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detran</title>
+    <style>
+        div#sis{
+            font-family: Arial, Helvetica, sans-serif;
+            border: 2px solid darkblue;
+            height: 220px;
+            width: 400px;
+            padding: 10px;
+            background-color: rgb(11, 197, 197);
+        }
+        input{
+            width: 80px;
+            border: 2px solid;
+        }
+        input#ver:hover{
+            cursor: pointer;
+            background-color: rgb(204, 194, 194);
+        }
+    </style>
 </head>
 <body>
+    <div id='sis'>
     <h1>Sistema de Multas</h1>
 
-    Velocidade do carro:<input type="number" name="txtvel" id="txtvel"><km>
-    <input type="button" value="verificar">
+    Velocidade do carro:<input type="number" name="txtvel" id="txtvel">km/h
+    <input id='ver' type="button" value="verificar" onclick="calcular()">
+    <div id= 'res'></div>
+   
+   <script>
+        function calcular(){
+            var txtv = window.document.getElementById('txtvel')
+            var res = window.document.getElementById
+            ('res')
+            var vel = Number(txtv.value)
+            res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel} km/h</strong></p>`  
+            if (vel > '60'){
+                res.innerHTML += `<p>Você está <strong>Multado</strong> por excesso de velocidade </p>`
+            }
+            res.innerHTML += `<p>Dirija sempre com cinto de segurança!<p/>`
+        }
+    </script>
+    </div>
 </body>
 </html>
